# agrio.wasmsdk

./: .gitmodules  CMakeLists.txt  ClangExternalProject.txt  Doxyfile  InstallClang.txt  README.md  ToolsExternalProject.txt  agrio.imports.in  build.sh  install.sh  uninstall.sh
.buildkite/: pipeline.yml
docker/: install_deb.sh
docs/guides/: cmake.md  first-smart-contract.md  generator-attributes.md  native-tester.md
docs/tools/: agrio-abidiff.md  agrio-abigen.md  agrio-cpp.md  agrio-init.md  agrio-ld.md
docs/upgrading/: 1.2-to-1.3.md  1.5-to-1.6.md
examples/abigen_test/: CMakeLists.txt  abitest.cpp  test.cpp
examples/exchange/: CMakeLists.txt  exchange.abi  exchange.cpp  exchange.hpp  exchange_accounts.cpp  exchange_accounts.hpp  exchange_state.cpp  exchange_state.hpp  market_state.cpp  market_state.hpp  test_exchange.cpp
examples/hello/: CMakeLists.txt  README.txt  hello.abi  hello.clauses.md  hello.cpp  hello.hpp  hello_rc.md
examples/hello/include/: hello.hpp
examples/hello/src/: CMakeLists.txt  hello.cpp
examples/hello/tests/: CMakeLists.txt  hello_test.cpp
examples/multi_index_example/: CMakeLists.txt  README.txt  multi_index_example.cpp
examples/multi_index_example/include/: multi_index_example.hpp
examples/multi_index_example/src/: CMakeLists.txt  multi_index_example.cpp
examples/send_inline/: CMakeLists.txt  README.txt  send_inline.cpp
examples/send_inline/include/: send_inline.hpp
examples/send_inline/src/: CMakeLists.txt  send_inline.cpp
examples/template/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/agriolib/: CMakeLists.txt  action.h  action.hpp  agrio.hpp  agriolib.cpp  asset.hpp  binary_extension.hpp  chain.h  compiler_builtins.h  contract.hpp  contracts.dox  core_symbol.hpp.in  crypto.cpp  crypto.h  crypto.hpp  currency.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_bytes.hpp  fixed_key.hpp  fixedpoint.hpp  ignore.hpp  mainpage.md  malloc.cpp  memory.h  memory.hpp  multi_index.hpp  name.hpp  optional.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  public_key.hpp  reflect.hpp  rpc.dox  (+13 more)
libraries/agriolib/capi/agrio/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/agriolib/contracts/agrio/: action.hpp  agrio.hpp  contract.hpp  dispatcher.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  singleton.hpp  system.hpp  transaction.hpp
libraries/agriolib/core/agrio/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  ignore.hpp  name.hpp  print.hpp  rope.hpp  serialize.hpp  symbol.hpp  time.hpp  varint.hpp
libraries/boost/include/boost/config/detail/: select_platform_config.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/native/: CMakeLists.txt  crt.cpp  crt.hpp  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/native/native/agrio/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/rt/: compiler_builtins.cpp
modules/: AgrioCDTMacros.cmake.in  AgrioLibConfig.cmake.in  AgrioWasmToolchain.cmake.in  AgrioWasmToolchainBuild.cmake.in  ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  agrio.cdt-config.cmake
scripts/: agrio_build_amazon.sh  agrio_build_centos.sh  agrio_build_darwin.sh  agrio_build_fedora.sh  agrio_build_ubuntu.sh  generate_bottle.sh  generate_tarball.sh
scripts/ricardagr/: README.md  ricardagr.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  main.cpp  memory_tests.cpp
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp
tests/unit/test_contracts/: malloc_tests.cpp  simple_tests.cpp  simple_wrong.abi  transfer.cpp  transfer.hpp
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  agrio-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  agrio-abigen.cpp.in
tools/cc/: CMakeLists.txt  agrio-cc.cpp.in  agrio-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/include/agrio/: abi.hpp  abigen.hpp  codegen.hpp  gen.hpp  utils.hpp
tools/include/agrio/whereami/: whereami.hpp
tools/init/: CMakeLists.txt  agrio-init.cpp
tools/ld/: CMakeLists.txt  agrio-ld.cpp.in
